# oceannes

./: .gitignore
desktop/: CMakeLists.txt  main.cpp
desktop/config/: kerbdingings.conf
desktop/include/: CPU.h  CPUOpcodes.h  Cartridge.h  Controller.h  Emulator.h  LogUtil.h  MainBus.h  Mapper.h  MapperAxROM.h  MapperCNROM.h  MapperColorDreams.h  MapperGxROM.h  MapperMMC3.h  MapperNROM.h  MapperSxROM.h  MapperUxROM.h  PPU.h  PUU.h  PaletteColors.h  PictureBus.h  VirtualScreen.h
desktop/src/: CPU.cpp  Cartridge.cpp  Controller.cpp  Emulator.cpp  KeybindingsParser.cpp  LogUtil.cpp  MainBus.cpp  Mapper.cpp  MapperAxROM.cpp  MapperCNROM.cpp  MapperColorDreams.cpp  MapperGxROM.cpp  MapperMMC3.cpp  MapperNROM.cpp  MapperSxROM.cpp  MapperUxROM.cpp  PPU.cpp  PictureBus.cpp  VirtualScreen.cpp
vdesktop/: CMakeLists.txt  autobuild.sh  knowledge.md  main.cc  readme.md
vdesktop/include/: CPU.h  CPUOpcodes.h  Cartridge.h  Chip.h  Controller.h  Emulator.h  Log.h  MainBus.h  Mapper.h  MapperNROM.h  PPU.h  PaletteColors.h  PictureBus.h  VirtualScreen.h
vdesktop/src/: CPU.cc  Cartridge.cc  Controller.cc  Emulator.cc  Log.cc  MainBus.cc  Mapper.cc  MapperNROM.cc  PPU.cc  PictureBus.cc  VirtualScreen.cc
